# OverlayService

./: README.md  client.vala  dbus.conf  dbus.service  install.sh  meson.build  systemd.service  uninstall.sh
data/: dbus.service  systemd.service
src/: client.vala  freedesktop-dbus.vala  main.vala  meson.build  overlay-server.vala  server.vala
vapi/: config.vapi
